--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -872,17 +872,36 @@ margin-bottom: 15px;
   //animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
+.remerciements {
+  text-align: center;
+}
+.revenir {
+  align-self: center; 
+  position: relative;
+  left: 39%;
+ }
+.merci-descr {
+  font-family: Mukta-Regular, sans-serif;
+  font-size: 17px;
+  text-align: center;
+  color: #000B31
+}
 @media screen and (max-width: 700px) {
 
 .card {
   width: 100%;
 }
+.revenir {
+left: 0;
+ }
 .next-btn {
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 .prev-btn {
   margin-bottom: 10px;
 }
+
 .card .card_image {
   width: 30%;
 }
