--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -617,8 +617,8 @@
 </div>
 
 <div *ngIf="neonSelected?.state === 'payé'" class="ec-bigbox-detail row"> 
-  <div class=col-2></div>
-    <div class = 'col-8'>
+  <div class="col-2 forBigPussy"></div>
+    <div class = 'col-md-8 col-sm-12'>
         <div *ngIf="neonSelected.state !== 'created'" [style.backgroundImage]="'url('+ neonSelected.filePath +')'"
         class="neon-canvas2"></div>
         <button  (click)="resetView();"
@@ -626,7 +626,7 @@
         <h2  class='remerciements'>Commande envoyée !</h2>
         <span class='merci-descr'>Merci pour votre commande, un email de confirmation vous à été envoyée. Pour toute demande, notre équipe est joignable à l'adresse dessinemoiunneon@contact.fr</span>
     </div>
-    <div class=col-2></div>
+    <div class="col-2 forBigPussy"></div>
 
 </div>
 
