--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -879,6 +879,7 @@ margin-bottom: 15px;
   align-self: center; 
   position: relative;
   left: 39%;
+  margin-bottom: 5%;
  }
 .merci-descr {
   font-family: Mukta-Regular, sans-serif;
