--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,11 +12,11 @@
 
 <app-neon-list *ngIf="getView()  === 'client'"></app-neon-list>
 
-<!-- 
+
 <div style="position: fixed; bottom: 25px;">
                 <button (click)="logout()">Logout</button>
         <button (click)="onClickView('login')">Login</button>  
         <button (click)="onClickView('form')">Form</button>
         <button (click)="onClickView('client')">Espace Client</button>
         <button (click)="onClickView('admin')">Admin</button>
-</div> -->
+</div>
