--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -1,5 +1,5 @@
 <div class='form-container'>
-  <input (keyup)="onChangeTextTitle($event.target.value)" [(value)]="textInput"  maxlength="35" [className]="neonColorClass + ' dynamicNeonTitle ' + neonTypoClass "
+  <input autocomplete="off" (keyup)="onChangeTextTitle($event.target.value)" [(value)]="textInput"  maxlength="35" [className]="neonColorClass + ' dynamicNeonTitle ' + neonTypoClass "
    style="align-self: center; text-align: center; letter-spacing: 2px;"  *ngIf="userChoices[0] === 'text' && userChoices[3] === 'typo' " >
       <!-- <h2   [className]="neonColorClass + ' ' + neonTypoClass " style="align-self: center; text-align: center; letter-spacing: 2px; width: 100%;" >{{textInput}}</h2> -->
 
@@ -11,9 +11,9 @@
         <h4 class="neon-wizard-header flex1">Faîtes votre choix</h4>
 
         <div class="neon-wizard-btn-container  row flex3 ">  
-          <button type="button" class="form-btn col-md-3 col-sm-12" (click)="onCompleteStep(0, 'text', null)"
+          <button type="button" class="form-btn col-md-4 col-sm-12" (click)="onCompleteStep(0, 'text', null)"
             awNextStep>TEXTE</button>
-          <button type="button" class="form-btn col-md-3 col-sm-12" (click)="onCompleteStep(0, 'image', null)"
+          <button type="button" class="form-btn col-md-4 col-sm-12" (click)="onCompleteStep(0, 'image', null)"
             awNextStep>IMAGE</button>
         </div>
 
@@ -24,7 +24,7 @@
           <div class="neon-wizard-header">
             <h5>Ecrivez votre texte</h5>
           </div>
-          <input (keyup)="onChangeTextTitle($event.target.value)" placeholder="Texte" maxlength="35" [(value)]="textInput"
+          <input autocomplete="off" file='text' (keyup)="onChangeTextTitle($event.target.value)" placeholder="" maxlength="35" [(value)]="textInput"
             class="basic-input-text mb5  mt5" />
 
         </div>
@@ -32,7 +32,7 @@
           <div class="neon-wizard-header">
             <h5>Importer votre image</h5>
           </div>
-          <input (change)="onSelectFile($event)"  type="file"   class="basic-input-form"/>
+          <input autocomplete="off" (change)="onSelectFile($event)"  type="file"   class="basic-input-form"/>
 <!-- 
           <div   class="money">
               <input (change)="onSelectFile($event)" type="text" class="numberOnly" autocomplete="off" maxlength="8" /><div>$</div>                      
@@ -83,74 +83,18 @@
                                 </div>
                               </div>
 
-<!-- 
-                              <ng-template #slide let-slide>
-                                  <div [ngStyle]="{
-                                      'background-size': 'cover',
-                                      'background-image': 'url(' + slide.url + ')',
-                                      'background-repeat': 'no-repeat',
-                                      'width': '100%',
-                                      'height': '100%'
-                                    }">
-                                  </div>
-                                </ng-template>
-                                <ng-template #thumbnail let-slide>
-                                    <div [ngStyle]="{
-                                        'background-size': 'cover',
-                                        'background-image': 'url(' + slide.url + ')',
-                                        'background-repeat': 'no-repeat',
-                                        'background-position': 'center center',
-                                        'width': '100%',
-                                        'height': '100%'
-                                      }"></div>
-                                </ng-template> -->
+
         </div>
-        <!-- <div class='item-container npb'>
-                  <div class="neon-wizard-header"><h4>Choisissez votre format</h4></div>
-                  <div class="row">
-                      <label><input type="checkbox" class="ios-switch"  /><div><div></div></div></label>
-                      <span class="tailleperso">Taille personalisée</span>
-                  </div>
-        
-      
-              </div>   -->
-
-
-        <!-- <div class='item-container npt npb  row'> -->
-
-
-        <!-- <div class="size-container row">
-                       <div  class="circle-cont col" (click)="selectedFormatSize = i" *ngFor="let format of formatSizes;  let i = index"   >
-                          <div [ngClass]="{'circle yellow-selected': selectedFormatSize===i, 'circle':selectedFormatSize!=='2' }">{{format.size}}</div>
-                          
-                       <div class=format-subtitle>{{format.width}}</div> 
-                       </div>
-      
-                    </div></div> -->
-
-        <!-- 
-              <div class='item-container npt npb'>
-                  <div class="neon-wizard-header"><h4>Choisissez votre support</h4></div>
-                <div class="form-style-container-small">    
-                    <div (click)="imageSupportSelected = 1" [ngClass]="{'style-item-small yellow-selected': imageSupportSelected===1, 'style-item-small':imageSupportSelected!=='2' }" >
-                          
-                          <span  style='position: relative; top: 40%'>Image support Standard</span>
-                    </div>
-                    <div (click)="imageSupportSelected = 2" [ngClass]="{'style-item-small yellow-selected': imageSupportSelected===2, 'style-item-small':imageSupportSelected  !=='1' }"  >
-                         
-                          <span  style='position: relative; top: 40%'> Image support detournée</span>
-                    </div>
-                </div>  
-            </div> -->
+     
         <div class="neon-wizard-btn-container row ">
-          <button class="prev-btn col-md-3 col-sm-12" type="button" (click)="onCompleteStep(3, 'erase', null)" awPreviousStep>Précedent</button>
-          <button class="next-btn col-md-3 col-sm-12" type="button" awNextStep>Suivant</button>
+          <button class="prev-btn col-md-3 col-sm-12" type="button" (click)="onCompleteStep(3, 'erase', null)"  awPreviousStep>Précedent</button>
+          <button [ngClass]="!selectedTypo? 'next-btn col-md-3 col-sm-12 disabled' : 'next-btn col-md-3 col-sm-12'"  type="button"  [disabled]="!selectedTypo"  awNextStep>Suivant</button>
         </div>
 
       </aw-wizard-step>
       <aw-wizard-step stepTitle="" class="col-md-6 col-sm-10  step-container">
 
-        <div  [style.background-color]="userChoices[0] !== 'text' ? neonColorCode : ''" class="neon-wizard-header">
+        <div    class="neon-wizard-header">
           <h4>Choisissez une couleur </h4>
         </div>
 
@@ -159,12 +103,12 @@
 
             
         <div  class="mt5 mb5 row colorCont">
-            <div  [ngClass]=" selectedColorUI=== i? 'size yellow-selected col-md-2 col-sm-3 colorIcon' : 'size  col-md-2 col-sm-3 colorIcon'"   [style.backgroundImage]="'url('+ color.url +')'"   (click)="onSelectColor(color)" 
-              *ngFor="let color of colorList;  let i = index">
-  
-  
-              <!-- <div class=format-subtitle>{{format.width}}</div>  -->
-            </div>
+          <div  [ngClass]=" selectedColorUI=== i? ' yellow-selected col-md-4  col-sm-6 colorIcon' : '  col-md-4 col-sm-6 colorIcon'"   [style.backgroundImage]="'url('+ color.url +')'"   (click)="onSelectColor(color, i)" 
+          *ngFor="let color of colorList;  let i = index">
+
+
+          <!-- <div class=format-subtitle>{{format.width}}</div>  -->
+        </div>
   
           </div>
             <!-- <ul id="flexible">
@@ -201,7 +145,7 @@
         <div class="row ">
             <div  class='sizeName  col-3'
             *ngFor="let format of formatSizes;  let i = index">
-           {{format.width}} cm
+           {{format?.width}} cm
   
   
             <!-- <div class=format-subtitle>{{format.width}}</div>  -->
@@ -210,19 +154,19 @@
         </div>
         <div class="neon-wizard-btn-container mt5 row flex1 pb5">
           <button class="prev-btn col-md-3 col-sm-12" type="button" awPreviousStep>Précedent</button>
-          <button class="next-btn col-md-3 col-sm-12" type="button" awNextStep>Suivant</button>
+          <button  [ngClass]="!selectedFormatSize? 'next-btn col-md-3 col-sm-12 disabled' : 'next-btn col-md-3 col-sm-12'"  type="button" [disabled]="!selectedFormatSize"  awNextStep>Suivant</button>
         </div>
 
       </aw-wizard-step>
       <aw-wizard-step stepTitle="" class="col-md-6 col-sm-10  step-container">
         <h5 class="neon-wizard-header flex1 mb5">Choisissez votre support</h5>
-
+        
         <div class="neon-wizard-btn-container row flex3 ">
-          <div  [style.backgroundImage]="'url('+ '../.././assets/img-support-detoure-19.png' +')'"   id='supportImg' [ngClass]=" imageSupportSelected==='détouré'? 'yellow-selected' : ''"
+          <div  [style.backgroundImage]="'url('+ '../.././assets/img-support-detoure-19.png' +')'"   id='supportImg' [ngClass]=" imageSupportSelected==='détouré'? 'yellow-selected-detoure col-md-6 col-sm-12' : 'col-md-6 col-sm-12 caca'"
            (click)="imageSupportSelected = 'détouré'" >
             </div>
 
-            <div  [style.backgroundImage]="'url('+ '../.././assets/img-support-standard-18.png' +')'"   id='supportImg'   [ngClass]=" imageSupportSelected==='standard'? 'yellow-selected' : ''"
+            <div  [style.backgroundImage]="'url('+ '../.././assets/img-support-standard-18.png' +')'"   id='supportImg'   [ngClass]=" imageSupportSelected==='standard'? 'yellow-selected-standard col-md-6 col-sm-12 ' : 'col-md-6 col-sm-12'"
             (click)="imageSupportSelected = 'standard'" >
           </div>
   
@@ -233,7 +177,7 @@
         </div>
         <div class="neon-wizard-btn-container mt5 row">
           <button class="prev-btn  col-md-3 col-sm-12" type="button" awPreviousStep>Précedent</button>
-          <button class="next-btn  col-md-3 col-sm-12" type="button" (click)="onCompleteStep(4, imageSupportSelected, null)"  awNextStep>Suivant</button>
+          <button [ngClass]="!imageSupportSelected? 'next-btn col-md-3 col-sm-12 disabled' : 'next-btn col-md-3 col-sm-12'" type="button" [disabled]="!imageSupportSelected" (click)="onCompleteStep(4, imageSupportSelected, null)"  awNextStep>Suivant</button>
 
         </div>
 
@@ -253,7 +197,7 @@
 
         <div class="neon-wizard-btn-container row">
           <button class="prev-btn  col-md-3 col-sm-12" type="button" awPreviousStep>Précedent</button>
-          <button class="next-btn  col-md-3 col-sm-12" type="button" awNextStep>Suivant</button>
+          <button  [ngClass]="!projectType? 'next-btn col-md-3 col-sm-12 disabled' : 'next-btn col-md-3 col-sm-12'"  [disabled]="!projectType"  class="next-btn  col-md-3 col-sm-12" type="button" awNextStep>Suivant</button>
         </div>
       </aw-wizard-step>
 
@@ -261,9 +205,9 @@
 
 
 
-      <aw-wizard-step stepTitle="" class="col-md-6 col-sm-10 ">
+      <aw-wizard-step stepTitle="" class="col-md-6 col-sm-10  step-container">
 
-        <div *ngIf="projectType === 'consumer'" class="step-container">
+        <div *ngIf="projectType === 'consumer'" class="col-md-12 col-sm-12">
           <h5 class="neon-wizard-header ">Obtenez votre dessin technique en {{suceMaBite}}</h5>
 
 
@@ -272,14 +216,14 @@
 
             <div *ngIf="signUp" class='user-info-row-cont nestedInput'>
               <span class="user-info-row-title">Prénom</span>
-              <input (change)="onChangeUserInfo('nickname', $event.target.value)"
+              <input autocomplete="off" (change)="onChangeUserInfo('nickname', $event.target.value)"
                 [value]="userInfoPerso['nickname'] || ''" class="basic-input smallHeight " />
             </div>
 
 
             <div *ngIf="signUp" class='user-info-row-cont nestedInput'>
               <span class="user-info-row-title">Nom</span>
-              <input (change)="onChangeUserInfo('name', $event.target.value)" [value]="userInfoPerso['name'] || ''"
+              <input autocomplete="off" (change)="onChangeUserInfo('name', $event.target.value)" [value]="userInfoPerso['name'] || ''"
                 class="basic-input smallHeight " />
             </div>
 
@@ -288,7 +232,7 @@
 
           <div class='user-info-row-cont'>
             <span class="user-info-row-title">Adresse mail</span>
-            <input (change)="onChangeUserInfo('email', $event.target.value)" [value]="userInfoPerso['email'] || ''"
+            <input autocomplete="off" (change)="onChangeUserInfo('email', $event.target.value)" [value]="userInfoPerso['email'] || ''"
               class="basic-input smallHeight " />
 
           </div>
@@ -296,10 +240,10 @@
 
           <div class='user-info-row-cont'>
             <span class="user-info-row-title">Mot de passe</span>
-            <input type="password" (change)="onChangeUserInfo('password', $event.target.value)"
+            <input autocomplete="off" type="password" (change)="onChangeUserInfo('password', $event.target.value)"
               [value]="userInfoPerso['password'] || ''" class="basic-input smallHeight mb3 " />
             <span class='user-info-row-title textcenter'>En cliquant sur "envoyer" vous acceptez les <a
-                href="#">Conditions générales d'utilisation</a></span>
+                href="#">Conditions g énérales d'utilisation</a></span>
 
 
           </div>
@@ -310,7 +254,7 @@
           </div>
 
           <div class="row toggleCont">
-            <label><input (change)="signuptrue()" type="checkbox" class="ios-switch" />
+            <label><input  autocomplete="off" (change)="signuptrue()" type="checkbox" class="ios-switch" />
               <div>
                 <div></div>
               </div>
@@ -322,11 +266,11 @@
         </div>
 
 
-        <div *ngIf="projectType === 'business'" class="step-container col-md-6 col-sm-10 ">
+        <div *ngIf="projectType === 'business'" class=" col-md-12 col-sm-12 ">
           <h5 class="neon-wizard-header ">Obtenez votre devis gratuit</h5>
           <div class='user-info-row-cont'>
             <span class="user-info-row-title">Société</span>
-            <input (change)="onChangeUserInfo('société', $event.target.value)" [value]="userInfoPerso['société'] || ''"
+            <input  autocomplete="off" type="text" (change)="onChangeUserInfo('société', $event.target.value)" [value]="userInfoPerso['société'] || ''"
               class="basic-input smallHeight mb3 " />
           </div>
 
@@ -334,14 +278,14 @@
 
             <div class='user-info-row-cont nestedInput'>
               <span class="user-info-row-title">Prénom</span>
-              <input (change)="onChangeUserInfo('nickname', $event.target.value)"
+              <input autocomplete="off" type="text" (change)="onChangeUserInfo('nickname', $event.target.value)"
                 [value]="userInfoPerso['nickname'] || ''" class="basic-input smallHeight " />
             </div>
 
 
             <div class='user-info-row-cont nestedInput'>
               <span class="user-info-row-title">Nom</span>
-              <input (change)="onChangeUserInfo('name', $event.target.value)" [value]="userInfoPerso['name'] || ''"
+              <input autocomplete="off"  type="text" (change)="onChangeUserInfo('name', $event.target.value)" [value]="userInfoPerso['name'] || ''"
                 class="basic-input smallHeight " />
             </div>
 
@@ -349,7 +293,14 @@
 
           <div class='user-info-row-cont'>
             <span class="user-info-row-title">Adresse mail</span>
-            <input (change)="onChangeUserInfo('email', $event.target.value)" [value]="userInfoPerso['email'] || ''"
+            <input autocomplete="off" type="email" (change)="onChangeUserInfo('email', $event.target.value)" [value]="userInfoPerso['email'] || ''"
+              class="basic-input smallHeight " />
+
+          </div>
+
+          <div class='user-info-row-cont'>
+            <span class="user-info-row-title">Mot de passe</span>
+            <input autocomplete="off" type="password" (change)="onChangeUserInfo('password', $event.target.value)" [value]="userInfoPerso['password'] || ''"
               class="basic-input smallHeight " />
 
           </div>
@@ -385,7 +336,7 @@
       <div>
         <a href="#" title="Close" class="modal-close">Close</a>
         <h1>Récapitulatif de votre demande: </h1>
-        <div style="height: 220px;">
+        <div style="height: 300px;">
 
           <table>
             <thead>
@@ -395,25 +346,25 @@
               <tr>
                 <td style="font-family: Mukta-Bold;" data-column="">
                   {{mainChoice === 'text' ? 'Texte' :' Fichier img'}}</td>
-                <td style="font-family: Mukta-Regular;" data-column="Etat">{{textInput}}</td>
+                <td style="font-family: Mukta-Regular;" data-column="Etat">{{textInput  | titlecase}}</td>
               </tr>
               <tr>
                 <td style="font-family: Mukta-Bold;" data-column="">Typographie</td>
-                <td style="font-family: Mukta-Regular;" data-column="Etat">{{styleSelected}}</td>
+                <td style="font-family: Mukta-Regular;" data-column="Etat">{{selectedTypo  | titlecase}}</td>
               </tr>
               <tr >
                   <td  style="font-family: Mukta-Bold;" data-column="">Couleurs</td>
-                  <td style="font-family: Mukta-Regular;" data-column="Etat">{{selectedColor}}</td>
+                  <td style="font-family: Mukta-Regular;" data-column="Etat">{{selectedColor  | titlecase}}</td>
                 </tr>
-              <tr>
+              <tr *ngIf="formatSizes[selectedFormatSize]">
                 <td style="font-family: Mukta-Bold;" data-column="">Hauteur</td>
-                <td style="font-family: Mukta-Regular;" data-column="Etat">{{formatSizes[selectedFormatSize].width}} cm
+                <td style="font-family: Mukta-Regular;" data-column="Etat">{{formatSizes[selectedFormatSize].width }} cm
                 </td>
               </tr>
               <tr >
                   <td  style="font-family: Mukta-Bold;" data-column="
                   ">Support</td>
-                  <td style="font-family: Mukta-Regular;" data-column="Etat">{{imageSupportSelected}}</td>
+                  <td style="font-family: Mukta-Regular;" data-column="Etat">{{imageSupportSelected  | titlecase}}</td>
                 </tr>
               <tr>
   
