--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -535,6 +535,7 @@ padding-bottom: 10px;
 min-height: 100vh;
 // padding-top: 7%;
 display: flex;
+background-color: blue !important;
 flex-direction: column;
 justify-content: flex-start;
 }
