--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -501,9 +501,9 @@ box-sizing: border-box;
 
 
 .steps-indicator {
-// position: absolute !important;
-// top: 60% !important;
-display: none !important;
+position: absolute !important;
+top: 60% !important;
+// display: none !important;
 }
 
 .dynamicNeonTitle {
